footer blur and Z-index fixed

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,128 +1,135 @@
+.footer {
+  position: relative;
+  display: flex;
+  flex-flow: row wrap;
+  padding: 30px 30px 20px 30px;
+  color: #ffffff;
 
-  
-  .footer {
-    display: flex;
-    flex-flow: row wrap;
-    padding: 30px 30px 20px 30px;
-    color: #ffffff;
-/* z-index: 5; */
+  background: rgba(0, 0, 0, 0.09);
+  border-radius: 16px;
+  backdrop-filter: saturate(100%) blur(4.2px);
+  -webkit-backdrop-filter: saturate(180%) blur(4.2px);
+  outline: 15px solid hsla(0, 49%, 10%, 0.04);
+  outline-offset: -7.5px;
+  z-index: 7;
+}
+
+.footer>* {
+  flex: 1 100%;
+  z-index: 5;
+}
+
+.footer__addr {
+  margin-right: 1.25em;
+  margin-bottom: 2em;
+}
+
+.footer__logo {
+  font-family: 'Pacifico', cursive;
+  font-weight: 400;
+  text-transform: UPPERCASE;
+  font-size: 2.5rem;
+}
+
+.footer__addr h2 {
+  margin-top: 1.3em;
+  font-size: 20px;
+  margin-bottom: 1.2em;
+  font-weight: 400;
+}
+
+.nav__title {
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.footer address {
+  font-style: normal;
+  color: #cac4c4;
+  text-align: justify;
+}
+
+.footer__btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 36px;
+  max-width: max-content;
+  background-color: rgb(255 255 255 / 30%);
+  border-radius: 100px;
+  color: #cac4c4;
+  line-height: 0;
+  margin: 0.6em 0;
+  font-size: 1rem;
+  padding: 0 1.3em;
+}
+
+.footer ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.footer li {
+  line-height: 2em;
+}
+
+.footer a {
+  text-decoration: none;
+}
+
+.footer__nav {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.footer__nav>* {
+  flex: 1 50%;
+  margin-right: 1.25em;
+}
+
+.nav__ul a {
+  color: #cac4c4;
+}
+
+.nav__ul--extra {
+  column-count: 2;
+  column-gap: 1.25em;
+}
+
+.legal {
+  display: flex;
+  flex-wrap: wrap;
+  color: #cac4c4;
+}
+
+.legal__links {
+  display: flex;
+  align-items: center;
+}
+
+
+
+@media screen and (min-width: 24.375em) {
+  .legal .legal__links {
+    margin-left: auto;
   }
-  
-  .footer > * {
-    flex:  1 100%;
-    z-index: 5;
+}
+
+@media screen and (min-width: 40.375em) {
+
+  .footer__nav>* {
+    flex: 1;
   }
-  
+
+  .nav__item--extra {
+    flex-grow: 2;
+  }
+
   .footer__addr {
-    margin-right: 1.25em;
-    margin-bottom: 2em;
+    flex: 1 0px;
   }
-  
-  .footer__logo {
-    font-family: 'Pacifico', cursive;
-    font-weight: 400;
-    text-transform: UPPERCASE;
-    font-size: 2.5rem;
-  }
-  
-  .footer__addr h2 {
-    margin-top: 1.3em;
-    font-size: 20px;
-    margin-bottom: 1.2em;
-    font-weight: 400;
-  }
-  
-  .nav__title {
-    font-weight: 400;
-    font-size: 15px;
-  }
-  
-  .footer address {
-    font-style: normal;
-    color: #cac4c4;
-    text-align: justify;
-  }
-  
-  .footer__btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 36px;
-    max-width: max-content;
-    background-color: rgb(255 255 255 / 30%);
-    border-radius: 100px;
-   color: #cac4c4;
-    line-height: 0;
-    margin: 0.6em 0;
-    font-size: 1rem;
-    padding: 0 1.3em;
-  }
-  
-  .footer ul {
-    list-style: none;
-    padding-left: 0;
-  }
-  
-  .footer li {
-    line-height: 2em;
-  }
-  
-  .footer a {
-    text-decoration: none;
-  }
-  
-  .footer__nav {
-    display: flex;
-      flex-flow: row wrap;
-  }
-  
-  .footer__nav > * {
-    flex: 1 50%;
-    margin-right: 1.25em;
-  }
-  
-  .nav__ul a {
-    color: #cac4c4;
-  }
-  
-  .nav__ul--extra {
-    column-count: 2;
-    column-gap: 1.25em;
-  }
-  
-  .legal {
-    display: flex;
-    flex-wrap: wrap;
-    color: #cac4c4;
-  }
-    
-  .legal__links {
-    display: flex;
-    align-items: center;
-  }
-  
 
-  
-  @media screen and (min-width: 24.375em) {
-    .legal .legal__links {
-      margin-left: auto;
-    }
+  .footer__nav {
+    flex: 2 0px;
   }
-  
-  @media screen and (min-width: 40.375em) {
-    .footer__nav > * {
-      flex: 1;
-    }
-    
-    .nav__item--extra {
-      flex-grow: 2;
-    }
-    
-    .footer__addr {
-      flex: 1 0px;
-    }
-    
-    .footer__nav {
-      flex: 2 0px;
-    }
-  }
+}
